# nexi-xpay-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/nexi_mcp/: __main__.py  client.py  config.py  date_parser.py  mac.py  server.py
src/nexi_mcp/tools/: dettaglio_ordine.py  elenco_ordini.py  metodi_pagamento.py  warning.py
