[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexi-xpay-mcp-server"
version = "1.2.1"
description = "MCP server for Nexi XPay Back Office APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ing. Luca Stucchi" },
]
keywords = ["mcp", "nexi", "xpay", "payments", "back-office"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/stucchi/nexi-xpay-mcp-server"
Repository = "https://github.com/stucchi/nexi-xpay-mcp-server"
Issues = "https://github.com/stucchi/nexi-xpay-mcp-server/issues"

[project.scripts]
nexi-xpay-mcp-server = "nexi_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
